[package]
name = "html-resources"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
futures = "0.3"
anyhow = "1"
serde_json = "1"
